Fix button font color on mobile

--- a/style.css
+++ b/style.css
@@ -117,9 +117,14 @@ h1 {
   html {
     background-color: #fff;
   }
+
   body {
     border: none;
     box-shadow: none;
+  }
+
+  button {
+    color: #000;
   }
 
   #numbers button {
